css/project.css
body {
    background-image: url("../images/wallpaper.gif");
    width: 100%;
    height: 100%;
}

nav {
    height: 100px;
}

.container {
    margin: 0 auto !important;
    display: flex;
    align-items: center;
    justify-content: center;
}

.flex-container {
    padding: 100px;
    list-style: none;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
}

.fa-chevron-circle-down {
    color: firebrick;
}

.nav-link {
    color: white;
    font-family: 'Economica', sans-serif;
    text-transform: uppercase;
    font-size: 125%;
    padding: 40px;
    width: 100px;
    text-align: center;
}

.link {
    color: white;
}

#current-page:hover {
    color: white;
    background-color: firebrick;
    text-decoration: none;
}

#second-page:hover {
    background-color: goldenrod;
    text-decoration: none;
}

.navbar-brand {
    color: firebrick;
    font-family: 'Economica', sans-serif;
    text-transform: uppercase;
    font-size: 125%;
    padding: 40px;
    width: 100px;
    text-align: center;
    transform: rotate(270deg);
    margin-top: 30px;
}

.navbar-brand:hover {
    color: white;
}

.p-thank {
    font-family: 'Pacifico', cursive;
    color: white;
    font-size: 25px;
    line-height: 1.6;
    padding-bottom: 40px;
}

.list-contact {
    color: goldenrod;
    font-family: 'Economica', sans-serif;
    text-transform: uppercase;
    font-size: 125%;
}

.list-contact:hover {
    color: goldenrod;
    font-weight: bolder;
    text-decoration: none;
}

.contact {
    color: firebrick;
    font-family: 'Economica', sans-serif;
    text-transform: uppercase;
    font-size: 125%;
}

.card-row-1 .card-row-2 {
    display: block;
}

.card {
    clear: both;
    height: 400px;
    width: 800px;
    display: flex;
    text-align: center;
    justify-content: center;
    background-color: transparent;
}

.card-img {
    height: 200px;
}

.contact-me {
    display: block;
    text-align: center
}

.card-title {
    font-weight: bolder;
    font-size: 125%;
    font-family: 'Economica', sans-serif;
    text-transform: uppercase;
    color: white;
}

.card-text {
    font-family: 'Economica', sans-serif;
    text-transform: uppercase;
    color: white;
}

.card-deck {
    display: flex;
}

